<resources>
    <string name="app_name">Muslim Work</string>
    <string name="button">BUTTON</string>
    <string name="text1">IDN BOARDING SCHOOL</string>
    <string name="pw">Your Password</string>
    <string name="username">Your Username</string>
    <string name="todo">TODO</string>
    <string name="assalamu_alaikum_selamat_datang">Assalamu\'alaikum, Selamat Datang!</string>
    <string name="menu_doa">Daily Pray</string>
    <string name="menu_dzikir">Dzikir</string>
    <string name="menu_zakat">Zakat</string>
    <string name="menu_sholat">Pray Time</string>
    <string name="menu_kajian">Kajian</string>
    <string name="text_inspiration">Inspiration</string>
    <string name="card_inspiration_description">Clickable image inspiration</string>
    <string name="image_inspiration_description">Image of inspiration</string>
    <string name="text_pagi_amp_malam">Pagi &amp; Malam</string>
    <string name="text_doa_rumah">Rumah</string>
    <string name="text_doa_makanminum">Makanan &amp; Minuman</string>
    <string name="text_doa_perjalanan">Perjalanan</string>
    <string name="text_doa_sholat">Sholat</string>
    <string name="text_etika_baik">Etika Baik</string>
    <string name="text_menu_jadwal_sholat">Jadwal Sholat</string>
    <string name="text_location_pray">Depok, Jawa Barat</string>
    <string name="text_jadwal_imsak">Imsak</string>
    <string name="text_00">00.00</string>
    <string name="text_jadwal_subuh">Subuh</string>
    <string name="text_jadwal_dzuhur">Dzuhur</string>
    <string name="jadwal_sholat_ashar">Ashar</string>
    <string name="text_jadwal_magrib">Magrib</string>
    <string name="text_jadwal_isya">Isya</string>
    <string name="text_jadwal_terbit">Terbit</string>
    <string name="tv_title_arab">بِسْمِ اللَّه</string>
    <string name="text_title_doa">Title</string>
    <string name="tv_latin">Latin</string>
    <string name="tv_deskripsi_doa">Deskripsi</string>
    <string name="tv_riwayat_doa">Riwayat</string>
    <string name="text_menu_zakat">Kalkulator Zakat</string>
    <string name="total_harga">Total Harga</string>
    <string name="text_ok">OK</string>
    <string name="total_uang">Total Uang</string>
    <string name="zakat_dikeluarkan">Zakat Dikeluarkan</string>
    <string name="text_menu_video_kajian">Video Kajian</string>
    <string name="title_detail_kajian">Detail Video Kajian</string>
</resources>