<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"/>


    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="411dp"
        android:layout_height="227dp"
        android:layout_marginBottom="537dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/bg_pagi"
        tools:ignore="ImageContrastCheck"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="43dp"
        android:fontFamily="@font/brasika"
        android:shadowColor="#4B000000"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="@string/assalamu_alaikum_selamat_datang"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="@id/iv_header"
        app:layout_constraintTop_toTopOf="@id/iv_header"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="371dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_icon_menu_doa"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_doa" />

                <TextView
                    android:id="@+id/textViewDoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/menu_doa"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_icon_menu_dzikir"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_dzikir" />

                <TextView
                    android:id="@+id/textViewDzikir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/menu_dzikir"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_icon_menu_zakat"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_zakat" />

                <TextView
                    android:id="@+id/textViewZakat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/menu_zakat"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_icon_menu_praytime"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_waktu_solat" />

                <TextView
                    android:id="@+id/textViewPrayTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/menu_sholat"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_icon_menu_kajian"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_unknown" />

                <TextView
                    android:id="@+id/textViewKajian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/menu_kajian"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_inspiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter"
        android:text="@string/text_inspiration"
        android:textColor="#333333"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_inspiration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_inspiration"
        tools:listitem="@layout/item_inspiration" />

</androidx.constraintlayout.widget.ConstraintLayout>