<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doa.DoaActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_header"
        android:layout_width="421dp"
        android:layout_height="230dp"
        android:layout_marginTop="54dp"
        android:baselineAlignBottom="false"
        android:src="@drawable/bg_pagi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_menu_doa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/menu_doa"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sholat"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="190dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/cvPerjalanan"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_sholat"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_doa_sholat" />

            <TextView
                android:id="@+id/textViewDoasholat"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_doa_sholat"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPerjalanan"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_doa_perjalanan"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_doa_perjalanan" />

            <TextView
                android:id="@+id/textViewDoaPerjalanan"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_doa_perjalanan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_etikabaik"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="190dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_sholat"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_etikabaik"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_etika" />

            <TextView
                android:id="@+id/textViewDoamakanminum"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_etika_baik"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_makanminum"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_sholat"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_doa12"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_doa_makanminum" />

            <TextView
                android:id="@+id/textViewDoa9"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_doa_makanminum"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rumah"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/cv_pagimalam"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_rumah"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_doa_rumah" />

            <TextView
                android:id="@+id/textViewDoarumah"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_doa_rumah"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pagimalam"
        android:layout_width="115dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/seed"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/iv_icon_menu_doa"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/todo"
                android:textAlignment="center"
                app:srcCompat="@drawable/ic_doa_pagi_malam" />

            <TextView
                android:id="@+id/textViewDoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/text_pagi_amp_malam"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="normal" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>